--- a/src/Componentes/Css/Home.module.css
+++ b/src/Componentes/Css/Home.module.css
@@ -1,12 +1,31 @@
 .Container-Principal-Home{
     display: flex;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
     height: 100vh;
     width: 100%;
+    flex-direction: column;
+}
+.titulo{
+    font-family: 'Montserrat';
+    font-weight: bold;
+    background-color: yellow;
+    width: 50%;
+    border-radius: 40%;
+}
+.cointainerTitulo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.containerImg{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .Foto-Home{
-    width: 20%;
+    /* width: 20%; */
     /* transform: rotate(45deg); */
     animation: pepe 1s ;
 }
