--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: rgb(206, 207, 207);
+  background: #fff;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: 'Acme',kanit ,source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
