--- a/src/Componentes/Css/Card.module.css
+++ b/src/Componentes/Css/Card.module.css
@@ -1,7 +1,7 @@
 .container-principal{
     background-color: #F9F5EB;
-    height: 200px;
-    width: 250px;
+    /* height: 200px;
+    width: 250px; */
     position: relative;
     border-radius: 10%;
     margin: 20px;
