--- a/src/Componentes/Css/Paginado.module.css
+++ b/src/Componentes/Css/Paginado.module.css
@@ -1,15 +1,37 @@
 .active{
-    color: brown;
-    margin: 10px;
-
+    color: rgb(214, 22, 22);
+    text-shadow: 0px 1px 19px rgb(68, 0, 255);
+    margin: 0px 10px 5px;
 }
 .desactive{
-    color: blue;
-    margin: 10px;
+    color: #573a1e;
+    margin: 0px 10px 5px;
+    border-radius: 20px;
 }
 
 .containerPrincipal{
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 20px;
+}
+
+.button{
+    border-radius: 100%;
+    height: 25px;
+    width: 25px;
+    border: solid 1px black;
+    background-color: #a88664;
+    color: #573a1e;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.2s;
+}
+
+.button:hover{
+    background-color: #573a1e;
+    color: #a88664;
 }
